@@ -1,0 +1,11 @@
+---
+elements:
+    - type: DateTime
+      name: foo
+      field_order: ['day', 'month', 'year', 'hour', 'minute', 'second']
+      year:
+        list: [2007, 2008, 2009, 2010, 2011]
+      minute:
+        interval: 5
+      second:
+        interval: 30
